--- a/Assignment1/assignment1_q4.ipynb
+++ b/Assignment1/assignment1_q4.ipynb
@@ -13,20 +13,13 @@
     "import numpy as np\n",
     "\n",
     "def is_red(pixel):\n",
-    "    \"\"\"Check if a pixel is red based on RGB values.\"\"\"\n",
     "    r, g, b = pixel\n",
-    "    return r > 100 and g < 100 and b < 100  # High R, low G and B\n",
+    "    return r > 100 and g < 100 and b < 100\n",
     "\n",
     "def is_white(pixel):\n",
-    "    \"\"\"Check if a pixel is white based on RGB values.\"\"\"\n",
     "    r, g, b = pixel\n",
-    "    return r > 200 and g > 200 and b > 200  # High R, G, and B\n",
-    "\n",
+    "    return r > 200 and g > 200 and b > 200\n",
     "def compute_mean_position(image_array, condition_function):\n",
-    "    \"\"\"\n",
-    "    Compute the mean vertical position (y-coordinate) of pixels\n",
-    "    that satisfy a given condition.\n",
-    "    \"\"\"\n",
     "    y_positions = [\n",
     "        i for i in range(image_array.shape[0])\n",
     "        for j in range(image_array.shape[1])\n",
@@ -37,23 +30,17 @@
     "    return None\n",
     "\n",
     "def determine_flag(image_path):\n",
-    "    \"\"\"\n",
-    "    Determine if the given image contains the flag of Indonesia or Poland.\n",
-    "    \"\"\"\n",
     "    img = Image.open(image_path).convert(\"RGB\")\n",
     "    image_array = np.array(img)\n",
     "\n",
-    "    # Compute mean vertical positions of red and white pixels\n",
     "    mean_red = compute_mean_position(image_array, is_red)\n",
     "    mean_white = compute_mean_position(image_array, is_white)\n",
     "\n",
     "    if mean_red is None or mean_white is None:\n",
     "        return \"No clear flag detected in the image.\"\n",
-    "\n",
-    "    # Compare positions\n",
-    "    if mean_red < mean_white:  # Red is higher\n",
+    "    if mean_red < mean_white:\n",
     "        return \"The flag is Indonesia.\"\n",
-    "    elif mean_white < mean_red:  # White is higher\n",
+    "    elif mean_white < mean_red:\n",
     "        return \"The flag is Poland.\"\n",
     "    else:\n",
     "        return \"The image does not match the Indonesia or Poland flag pattern.\"\n",
