--- a/Assignment1/assignment1_q4.ipynb
+++ b/Assignment1/assignment1_q4.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T16:30:35.678151Z",
-     "start_time": "2024-12-17T16:30:26.681566Z"
+     "end_time": "2024-12-17T18:36:02.073380Z",
+     "start_time": "2024-12-17T18:36:01.763759Z"
     }
    },
    "cell_type": "code",
@@ -12,46 +12,21 @@
     "from PIL import Image\n",
     "import numpy as np\n",
     "\n",
-    "def is_red(pixel):\n",
-    "    r, g, b = pixel\n",
-    "    return r > 100 and g < 100 and b < 100\n",
+    "def is_red(p): return p[0] > 100 and p[1] < 100 and p[2] < 100\n",
+    "def is_white(p): return p[0] > 200 and p[1] > 200 and p[2] > 200\n",
     "\n",
-    "def is_white(pixel):\n",
-    "    r, g, b = pixel\n",
-    "    return r > 200 and g > 200 and b > 200\n",
-    "def compute_mean_position(image_array, condition_function):\n",
-    "    y_positions = [\n",
-    "        i for i in range(image_array.shape[0])\n",
-    "        for j in range(image_array.shape[1])\n",
-    "        if condition_function(image_array[i, j])\n",
-    "    ]\n",
-    "    if y_positions:\n",
-    "        return np.mean(y_positions)\n",
-    "    return None\n",
+    "def compute_mean_position(a, f):\n",
+    "    return np.mean([i for i in range(a.shape[0]) for j in range(a.shape[1]) if f(a[i, j])]) if any(f(a[i, j]) for i in range(a.shape[0]) for j in range(a.shape[1])) else None\n",
     "\n",
-    "def determine_flag(image_path):\n",
-    "    img = Image.open(image_path).convert(\"RGB\")\n",
-    "    image_array = np.array(img)\n",
-    "\n",
-    "    mean_red = compute_mean_position(image_array, is_red)\n",
-    "    mean_white = compute_mean_position(image_array, is_white)\n",
-    "\n",
-    "    if mean_red is None or mean_white is None:\n",
-    "        return \"No clear flag detected in the image.\"\n",
-    "    if mean_red < mean_white:\n",
-    "        return \"The flag is Indonesia.\"\n",
-    "    elif mean_white < mean_red:\n",
-    "        return \"The flag is Poland.\"\n",
-    "    else:\n",
-    "        return \"The image does not match the Indonesia or Poland flag pattern.\"\n",
+    "def determine_flag(p):\n",
+    "    a = np.array(Image.open(p).convert(\"RGB\"))\n",
+    "    r, w = compute_mean_position(a, is_red), compute_mean_position(a, is_white)\n",
+    "    return \"No clear flag detected in the image.\" if r is None or w is None else \"The flag is Indonesia.\" if r < w else \"The flag is Poland.\" if w < r else \"The image does not match the Indonesia or Poland flag pattern.\"\n",
     "\n",
     "def main():\n",
-    "    image_path = 'img.png'\n",
-    "    result = determine_flag(image_path)\n",
-    "    print(result)\n",
-    "\n",
+    "    print(determine_flag('img.png'))\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ],
    "id": "3426683aa724d3e4",
    "outputs": [
