--- a/Assignment1/assignment1_q3.ipynb
+++ b/Assignment1/assignment1_q3.ipynb
@@ -2,30 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The flag is Indonesia.\n"
+      "Mean Red Position: 27.870189431704887 Mean White Position: 74.39209621993128\n",
+      "Flag detected: The flag is Indonesia.\n"
      ]
     }
    ],
    "source": [
+    " import torch\n",
+    "from torchvision import models, transforms\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "\n",
     "def is_red(p): \n",
-    "    if p[0] > 100 and p[1] < 100 and p[2] < 100:\n",
-    "        return True\n",
-    "    return False\n",
+    "    return p[0] > 100 and p[1] < 100 and p[2] < 100\n",
     "\n",
     "def is_white(p): \n",
-    "    if p[0] > 200 and p[1] > 200 and p[2] > 200:\n",
-    "        return True\n",
-    "    return False\n",
+    "    return p[0] > 200 and p[1] > 200 and p[2] > 200\n",
     "\n",
     "def compute_mean_position(a, f): \n",
     "    y_positions = []\n",
@@ -38,10 +37,10 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "def determine_flag(p):\n",
-    "    a = np.array(Image.open(p).convert(\"RGB\"))\n",
-    "    r = compute_mean_position(a, is_red)\n",
-    "    w = compute_mean_position(a, is_white)\n",
+    "def determine_flag_in_area(image_array):\n",
+    "    r = compute_mean_position(image_array, is_red)\n",
+    "    w = compute_mean_position(image_array, is_white)\n",
+    "    print(\"Mean Red Position:\", r, \"Mean White Position:\", w)  # Debug print\n",
     "\n",
     "    if r is None or w is None:\n",
     "        return \"No clear flag detected in the image.\"\n",
@@ -53,9 +52,48 @@
     "        return \"The image does not match the Indonesia or Poland flag pattern.\"\n",
     "\n",
     "def main():\n",
-    "    image_path = 'img.png'\n",
-    "    result = determine_flag(image_path)\n",
-    "    print(result)\n",
+    "    # Load SSD model\n",
+    "    model = models.detection.ssd300_vgg16(pretrained=True).eval()\n",
+    "\n",
+    "    # Transform for input image\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.ToTensor(),\n",
+    "    ])\n",
+    "\n",
+    "    # Load the image\n",
+    "    image_path = 'test_image.png'\n",
+    "    image = Image.open(image_path).convert(\"RGB\")\n",
+    "    image_tensor = transform(image).unsqueeze(0)\n",
+    "\n",
+    "    # Perform detection\n",
+    "    detections = model(image_tensor)[0]\n",
+    "\n",
+    "    # Threshold for confidence\n",
+    "    confidence_threshold = 0.2\n",
+    "\n",
+    "    # Convert image to numpy array\n",
+    "    image_array = np.array(image)\n",
+    "\n",
+    "    # Iterate through detections\n",
+    "    for i in range(len(detections['boxes'])):\n",
+    "        score = detections['scores'][i].item()\n",
+    "        label = detections['labels'][i].item()\n",
+    "\n",
+    "        # Assuming \"flag\" is mapped to a specific label ID (custom training required)\n",
+    "        if score > confidence_threshold:  # You can add `label == FLAG_LABEL_ID` for custom models\n",
+    "            # Extract bounding box\n",
+    "            box = detections['boxes'][i].detach().cpu().numpy().astype(int)\n",
+    "            x1, y1, x2, y2 = box\n",
+    "\n",
+    "            # Crop the detected region (flag)\n",
+    "            flag_region = image_array[y1:y2, x1:x2]\n",
+    "\n",
+    "            # Determine flag type\n",
+    "            flag_type = determine_flag_in_area(flag_region)\n",
+    "            print(f\"Flag detected: {flag_type}\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"No flag detected.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
