--- a/Assignment2/assignment2_q1.ipynb
+++ b/Assignment2/assignment2_q1.ipynb
@@ -2,34 +2,203 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\CEZAN DAMANIA\\PycharmProjects\\230310_CEZAN_DAMANIA_deeploycv\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\CEZAN DAMANIA\\PycharmProjects\\230310_CEZAN_DAMANIA_deeploycv\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=FasterRCNN_ResNet50_FPN_Weights.COCO_V1`. You can also use `weights=FasterRCNN_ResNet50_FPN_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\" to C:\\Users\\CEZAN DAMANIA/.cache\\torch\\hub\\checkpoints\\fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\n",
+      "100%|██████████| 160M/160M [00:21<00:00, 7.93MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torchvision\n",
+    "from torchvision.models.detection import fasterrcnn_resnet50_fpn\n",
+    "from torchvision.transforms import functional as F\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load a pretrained Faster R-CNN model\n",
+    "model = fasterrcnn_resnet50_fpn(pretrained=True)\n",
+    "model.eval()\n",
+    "\n",
+    "# Open video or image\n",
+    "cap = cv2.VideoCapture('your_video.mp4')  # Replace with 0 for webcam\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Preprocess the image\n",
+    "    image = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    image = F.to_tensor(image).unsqueeze(0)  # Add batch dimension\n",
+    "\n",
+    "    # Run the model\n",
+    "    with torch.no_grad():\n",
+    "        prediction = model(image)\n",
+    "\n",
+    "    # Get bounding boxes, labels, and scores\n",
+    "    boxes = prediction[0]['boxes']\n",
+    "    labels = prediction[0]['labels']\n",
+    "    scores = prediction[0]['scores']\n",
+    "\n",
+    "    # Draw bounding boxes on the frame\n",
+    "    for box, label, score in zip(boxes, labels, scores):\n",
+    "        if score > 0.5:  # Only show predictions with a high confidence score\n",
+    "            x1, y1, x2, y2 = map(int, box.tolist())\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "            cv2.putText(frame, f'{label.item()} {score:.2f}', (x1, y1 - 10),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
+    "\n",
+    "    # Show frame\n",
+    "    cv2.imshow(\"Frame\", frame)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "be8d529a",
+   "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "import tensorflow as tf\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from tensorflow_hub import load\n",
+    "\n",
+    "# Load the SSD MobileNet V2 model from TensorFlow Hub\n",
+    "detector = load(\"https://tfhub.dev/tensorflow/ssd_mobilenet_v2/2\")\n",
+    "\n",
+    "# Load the COCO labels\n",
+    "category_index = {\n",
+    "    1: 'person', 2: 'bicycle', 3: 'car', 4: 'motorcycle', 5: 'airplane', 6: 'bus', 7: 'train',\n",
+    "    8: 'truck', 9: 'boat', 10: 'traffic light', 11: 'fire hydrant', 13: 'stop sign',\n",
+    "    14: 'parking meter', 15: 'bench', 16: 'bird', 17: 'cat', 18: 'dog', 19: 'horse',\n",
+    "    20: 'sheep', 21: 'cow', 22: 'elephant', 23: 'bear', 24: 'zebra', 25: 'giraffe',\n",
+    "    27: 'backpack', 28: 'umbrella', 31: 'handbag', 32: 'tie', 33: 'suitcase',\n",
+    "    34: 'frisbee', 35: 'skis', 36: 'snowboard', 37: 'sports ball', 38: 'kite',\n",
+    "    39: 'baseball bat', 40: 'baseball glove', 41: 'skateboard', 42: 'surfboard',\n",
+    "    43: 'tennis racket', 44: 'bottle', 46: 'wine glass', 47: 'cup', 48: 'fork',\n",
+    "    49: 'knife', 50: 'spoon', 51: 'bowl', 52: 'banana', 53: 'apple', 54: 'sandwich',\n",
+    "    55: 'orange', 56: 'broccoli', 57: 'carrot', 58: 'hot dog', 59: 'pizza', 60: 'donut',\n",
+    "    61: 'cake', 62: 'chair', 63: 'couch', 64: 'potted plant', 65: 'bed', 67: 'dining table',\n",
+    "    70: 'toilet', 72: 'TV', 73: 'laptop', 74: 'mouse', 75: 'remote', 76: 'keyboard',\n",
+    "    77: 'cell phone', 78: 'microwave', 79: 'oven', 80: 'toaster', 81: 'sink',\n",
+    "    82: 'refrigerator', 84: 'book', 85: 'clock', 86: 'vase', 87: 'scissors',\n",
+    "    88: 'teddy bear', 89: 'hair drier', 90: 'toothbrush'\n",
+    "}\n",
+    "\n",
+    "# Load video\n",
+    "video_path = \"WIN_20241220_14_29_35_Pro.mp4\"  # Replace with your video file\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "if not cap.isOpened():\n",
+    "    print(\"Error: Unable to open video.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Get video properties\n",
+    "fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "\n",
+    "# Set up video writer for MP4\n",
+    "output_path = \"output_video.mp4\"\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "out = cv2.VideoWriter(output_path, fourcc, fps, (frame_width, frame_height))\n",
+    "\n",
+    "# Process each frame\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Convert frame to RGB\n",
+    "    # Convert frame to RGB\n",
+    "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # Resize and prepare input tensor\n",
+    "    input_tensor = tf.image.resize(frame_rgb, (320, 320))  # Resize for SSD MobileNet\n",
+    "    input_tensor = tf.cast(input_tensor, dtype=tf.uint8)  # Convert back to uint8\n",
+    "    input_tensor = tf.expand_dims(input_tensor, 0)  # Add batch dimension\n",
+    "\n",
+    "\n",
+    "    # Perform inference\n",
+    "    detections = detector(input_tensor)\n",
+    "\n",
+    "    # Extract detection details\n",
+    "    detection_boxes = detections[\"detection_boxes\"].numpy()[0]\n",
+    "    detection_classes = detections[\"detection_classes\"].numpy()[0].astype(int)\n",
+    "    detection_scores = detections[\"detection_scores\"].numpy()[0]\n",
+    "\n",
+    "    # Draw bounding boxes and labels on the frame\n",
+    "    for i in range(len(detection_scores)):\n",
+    "        if detection_scores[i] > 0.5:  # Confidence threshold\n",
+    "            box = detection_boxes[i]\n",
+    "            class_id = detection_classes[i]\n",
+    "            score = detection_scores[i]\n",
+    "\n",
+    "            # Convert normalized coordinates to pixel values\n",
+    "            y1, x1, y2, x2 = (box * [frame_height, frame_width, frame_height, frame_width]).astype(int)\n",
+    "\n",
+    "            # Draw bounding box\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "\n",
+    "            # Put label\n",
+    "            label = f\"{category_index[class_id]}: {score:.2f}\"\n",
+    "            cv2.putText(frame, label, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
+    "\n",
+    "    # Write frame to output video\n",
+    "    out.write(frame)\n",
+    "\n",
+    "    # Display the frame\n",
+    "    cv2.imshow(\"Object Detection\", frame)\n",
+    "\n",
+    "    # Exit on 'q' key press\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Release resources\n",
+    "cap.release()\n",
+    "out.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
